Updated Landing page UI + bug fixes
*Changed font
*Updated landing page layout
*added more glowing lines in landing page
* fixed some invisible buttons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,8 @@ textarea {
 }
 
 body {
-  /* font-family: "Space Grotesk", serif !important; */
-  font-family: "Space Mono", serif;
+  font-family: "Space Grotesk", serif !important;
+  /* font-family: "Space Mono", serif; */
   background-color: #ffffff;
   overflow-x: hidden;
 }
